# QRtcAlarm

./: .gitignore  AUTORS  COPYING  INSTALL  README
src/: CMakeLists.txt  SourceFiles.cmake
src/cmake/: commit_hash.h.in
src/core/: rtc.cpp  rtc.h
src/gui/: mainwindow.cpp  mainwindow.h  rtccalendarwidget.cpp  rtccalendarwidget.h
src/gui/ui/: mainwindow.ui
src/main/: main.cpp
src/resources/: resources.qrc
src/translations/: be_BY.ts  ru_RU.ts
